Clipping layers added with basic functionality. Fixed missing opacity setting.

--- a/src/UI/UI.css
+++ b/src/UI/UI.css
@@ -19,5 +19,5 @@
 }
 
 #texture1 {
-    -fx-graphic: url("cw1.jpg");
+    -fx-graphic: url("MapEditor/cw1.jpg");
 }
